crates/backyard-parser/tests/snapshots/foreach__basic.snap
---
source: crates/backyard-parser/tests/foreach.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: foreach
    source:
      node_type: variable
      name:
        node_type: identifier
        name: a
        loc:
          start:
            line: 1
            column: 9
            offset: 9
          end:
            line: 1
            column: 10
            offset: 10
        leadings: []
        trailings: []
      loc:
        start:
          line: 1
          column: 9
          offset: 9
        end:
          line: 1
          column: 10
          offset: 10
      leadings: []
      trailings: []
    key: ~
    value:
      node_type: reference
      statement:
        node_type: variable
        name:
          node_type: identifier
          name: b
          loc:
            start:
              line: 1
              column: 16
              offset: 16
            end:
              line: 1
              column: 17
              offset: 17
          leadings: []
          trailings: []
        loc:
          start:
            line: 1
            column: 16
            offset: 16
          end:
            line: 1
            column: 17
            offset: 17
        leadings: []
        trailings: []
      loc:
        start:
          line: 1
          column: 15
          offset: 15
        end:
          line: 1
          column: 16
          offset: 16
      leadings: []
      trailings: []
    body:
      node_type: block
      statements: []
      loc:
        start:
          line: 1
          column: 20
          offset: 20
        end:
          line: 2
          column: 0
          offset: 22
      leadings: []
      trailings: []
    is_short: false
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 2
        column: 0
        offset: 22
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 2
    column: 0
    offset: 22
leadings: []
trailings: []
